// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Packaging (Read & Write) can be selected from the prompt 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ Packaging (Read)
│  ● Packaging (Read & Write) (Create, read, update and delete packages)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read & Write)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`all prompts successful 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`complete non-default prompt flow selects read-write scope and forced acquisition 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ Packaging (Read)
│  ● Packaging (Read & Write) (Create, read, update and delete packages)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read & Write)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ no
│  ● yes (Only use this if the authentication fails without force token acquisition.)
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  yes
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`default command 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`forced acquisition can be selected from the prompt 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ no
│  ● yes (Only use this if the authentication fails without force token acquisition.)
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  yes
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`npm configuration path - initial value 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
◇  Where is the NPM configuration file?
│  ./.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;
